--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,15 +13,15 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Set up Node
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 22.16.0   # ✅ match your local version
 
       - name: Install Dependencies
         run: |
           cd portfolio
-          npm install
+          npm ci   # faster + cleaner than npm install
 
       - name: Build Project
         run: |
@@ -33,10 +33,10 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1   # change if your bucket is in another region
+          aws-region: ap-south-1   # update if bucket is in another region
 
       - name: Deploy to S3
         run: |
-          aws s3 sync portfolio/build s3://portfolioreact-aws \
+          aws s3 sync portfolio/dist s3://portfolioreact-aws \
             --delete \
             --exact-timestamps
